re PR fortran/44882 (Bogus types in references with mismatched commons)

2010-07-09  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/44882
	* tree-vect-stmts.c (vectorizable_store): Do not assert alias
	sets do conflict.
	(vectorizable_load): Likewise.

	* gfortran.dg/pr44882.f90: New testcase.

From-SVN: r161990